src/test/deca/context/invalid/decl_class_super_not_defined.deca
// Test of the rule (1.3) : can't declare a class that extends an
// inexistant class

class Voiture extends Vehicule {}

// Output :
//#

